--- a/css/style.css
+++ b/css/style.css
@@ -79,9 +79,15 @@ body {
 .grid-square {
     aspect-ratio: 1 / 1;
     background-color: #00ff00;
-    color: #00ff00;
     box-shadow: inset 0 0 0 1px #333;
     opacity: 0.1;
+    transition: opacity 0.2s ease-in;
+    
+}
+
+.grid-square:hover {
+    box-shadow: inset 0 0 0 1px #333, 0 0 10px rgba(0, 255, 0, 0.5);
+    text-shadow: 0 0 5px #00ff00;
 }
 
 h6 {
