--- a/css/style.css
+++ b/css/style.css
@@ -48,22 +48,27 @@ body {
     visibility: visible;
 }
 
-.game-ui {
+.score-container {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    align-items: center;
     color: #00ff00;
-    text-shadow: 0 0 5px #00ff00;
+    font-size: 1.7vw;
 }
-
-#score {
+#score-value {
     font-family: "Bungee Shade", cursive;
-    font-size: 3vw;
-    opacity: 0;
-    visibility: hidden;
+    text-shadow: 0 0 5px #00ff00;
     transition: opacity 0.5s ease-in-out 0.3s, visibility 0.5s ease-in-out 0.3s;
 }
 
-.visible #score {
+#score-text {
+    font-size: 1.7vw;
+    font-family: "Bungee Outline";
+    transform: translateY(5px);
+    opacity: 0.5;
+}
+
+.visible #score-value {
     opacity: 1;
     visibility: visible;
 }
