--- a/css/style.css
+++ b/css/style.css
@@ -15,16 +15,18 @@ body {
 }
 
 #startButton {
-    position:absolute;
+    position: absolute;
     font-size: 8vw;
     background-color: transparent;
     color: #00ff00;
     border: none;
     cursor: pointer;
-    transition: transform 0.3s, text-shadow 0.2s;
+    transition: transform 0.3s, text-shadow 0.2s, opacity 2s ease-in;
     font-family: "Bungee Outline", cursive;
     text-transform: uppercase;
     letter-spacing: 3px;
+    opacity: 0;
+    animation: fadeIn 2s forwards;
 }
 
 #startButton:hover {
@@ -55,6 +57,7 @@ body {
     color: #00ff00;
     font-size: 1.7vw;
 }
+
 #score-value {
     font-family: "Bungee Shade", cursive;
     text-shadow: 0 0 5px #00ff00;
@@ -86,8 +89,7 @@ body {
     background-color: #00ff00;
     box-shadow: inset 0 0 0 1px #333;
     opacity: 0.1;
-    transition: opacity 0.2s ease-in;
-    
+    transition: opacity 0s ease-in, opacity 0.2s ease-out;
 }
 
 .grid-square:hover {
@@ -103,7 +105,7 @@ h6 {
     font-family: "Bungee Outline", cursive;
     font-size: 1vw;
     text-align: center;
-    opacity: 50%;
+    opacity: 0.5;
 }
 
 h6 a {
@@ -112,5 +114,15 @@ h6 a {
 }
 
 h6 a:hover {
+    opacity: 1;
     text-shadow: 0 0 10px rgba(0, 255, 0, 0.7);
-} 
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
